endpoint insert dan get done
