# controller/repository/repository.go
@@ -3,8 +3,6 @@ package repository
 import (
 	"context"
 	"fmt"
-	"time"
-
 	"github.com/rofinafiin/lapak-UMK/controller/model"
 	"go.mongodb.org/mongo-driver/bson"
 	"go.mongodb.org/mongo-driver/mongo"
@@ -17,17 +15,17 @@ func InsertOneDoc(db *mongo.Database, collection string, doc interface{}) (inser
 	}
 	return insertResult.InsertedID
 }
-func InsertPenjualan(db *mongo.Database, id string, namaproduk string, jumlahpenjualan string, tanggaldatamasuk time.Time) (InsertedID interface{}, err error) {
+func InsertPenjualan(db *mongo.Database, id int, namaproduk string, jumlahpenjualan int, tanggaldatamasuk string) (InsertedID interface{}, err error) {
 	var m model.Penjualan
 	m.ID = id
 	m.NamaProduk = namaproduk
 	m.JumlahPenjualan = jumlahpenjualan
 	m.TanggalDataMasuk = tanggaldatamasuk
-	return InsertOneDoc(db, "laporankeungan", m), err
+	return InsertOneDoc(db, "penjualan", m), err
 }
 
 func GetPenjualanByNamaProduk(namaproduk string, db *mongo.Database) (data model.Penjualan, err error) {
-	user := db.Collection("laporankeungan")
+	user := db.Collection("penjualan")
 	filter := bson.M{"namaproduk": namaproduk}
 	err = user.FindOne(context.TODO(), filter).Decode(&data)
 	if err != nil {
@@ -35,17 +33,17 @@ func GetPenjualanByNamaProduk(namaproduk string, db *mongo.Database) (data model
 	}
 	return data, err
 }
-func InsertPengeluaran(db *mongo.Database, id string, nama string, jumlah int, tanggal time.Time) (InsertedID interface{}, err error) {
+func InsertPengeluaran(db *mongo.Database, id int, nama string, jumlah int, tanggal string) (InsertedID interface{}, err error) {
 	var m model.Pengeluaran
 	m.ID = id
 	m.Namapengeluaran = nama
 	m.Jumlah = jumlah
 	m.Tanggal = tanggal
-	return InsertOneDoc(db, "laporankeungan", m), err
+	return InsertOneDoc(db, "pengeluaran", m), err
 }
 func GetPengeluaranByNama(nama string, db *mongo.Database) (data model.Pengeluaran, err error) {
-	user := db.Collection("laporankeungan")
-	filter := bson.M{"Nama": nama}
+	user := db.Collection("pengeluaran")
+	filter := bson.M{"namapengeluaran": nama}
 	err = user.FindOne(context.TODO(), filter).Decode(&data)
 	if err != nil {
 		fmt.Printf("GetDataPengeluaranFormNama: %v\n", err)
