# main.go
@@ -1,7 +1,6 @@
 package main
 
 import (
-	"github.com/aiteung/musik"
 	gcjson "github.com/goccy/go-json"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/compress"
@@ -15,12 +14,22 @@ import (
 	"github.com/rofinafiin/lapak-UMK/url"
 )
 
+type ReturnData struct {
+	Code    int         `json:"code"`
+	Success bool        `json:"success"`
+	Status  string      `json:"status"`
+	Data    interface{} `json:"data"`
+}
+
 // @title LAPAK-UMK OPEN API PROTOTYPE
 // @version 2.0
 
-// @host Lapak-UMK.herokuapp.com
+// @host localhost:3000
 // @BasePath /
 // @schemes https
+// @Failure      400  {object}	ReturnData
+// @Failure      404  {object}  ReturnData
+// @Failure      500  {object}  ReturnData
 func main() {
 	_ = godotenv.Load("prod.env")
 
@@ -46,8 +55,8 @@ func main() {
 
 	// Setup the router
 	url.SetupRoutes(app)
-	app.Get("/docs/*", swagger.HandlerDefault)
+	app.Get("/doc/*", swagger.HandlerDefault)
 
 	// Listen on PORT 3000
-	app.Listen(musik.Dangdut())
+	app.Listen(":3000")
 }
