# url/routes.go
@@ -15,5 +15,7 @@ func SetuplapRoutes(router fiber.Router) {
 	router.Get("/penjualan/:namaproduk", UMK.GetDataPenjualan)
 	router.Get("/pengeluaran/:namapengeluaran", UMK.GetDataPengeluaran)
 	router.Post("/inspenjualan", UMK.InsertDataPenjualan)
+	router.Post("/inspengeluaran", UMK.InsPengeluaran)
+	router.Get("/peng/:namapengeluaran", UMK.GetPengeluaran)
 
 }
